# OpenGL-Engine

./: .gitignore  CMakeLists.txt  README.md
assets/statue_of_liberty/: liberty.mtl  license.txt
headers/: Camera.hpp  Mesh.hpp  Model.hpp  Shader.hpp  buffers.hpp  glm_print.hpp  texture.hpp
headers/glad/: glad.h
src/: Camera.cpp  Mesh.cpp  Model.cpp  Shader.cpp  buffers.cpp  glad.c  lightSource.frag  lightSource.vert  lightedObject.frag  lightedObject.vert  main.cpp  skybox.frag  skybox.vert  vshader.shad
